# baseline-warden

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  baseline-warden.toml  pyproject.toml
.github/workflows/: baseline-warden.yml  ci.yml  release.yml
baseline_warden/: __init__.py  cli.py  config.py
baseline_warden.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
baseline_warden/detect/: __init__.py  common.py  css.py  html.py
baseline_warden/evaluate/: __init__.py  policy.py  resolve.py
baseline_warden/index/: __init__.py  build.py  cache.py  fetch.py
baseline_warden/outputs/: __init__.py  gh_annotations.py  json.py  table.py
docs/: CONFIG.md
integrations/: pre-commit.yaml
integrations/action/: action.yml
tests/: test_build.py  test_cache.py  test_cli.py  test_cli_paths_override.py  test_cli_summary.py  test_css_descriptors_ignored.py  test_detect_common.py  test_detect_css.py  test_detect_html.py  test_detect_html_globals.py  test_detect_runner.py  test_evaluate_policy.py  test_fetch.py  test_resolve_fallback.py  test_scan_end_to_end.py
