[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-warden"
version = "0.0.0"
description = "Baseline compatibility gate for web projects"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Baseline Warden"}]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12,<0.13",
    "click>=8.1.7,<8.2",
    "pydantic>=2.6,<3",
    "httpx>=0.27,<0.28",
    "rich>=13.7,<14",
    "tinycss2>=1.3,<1.4"
]

[project.scripts]
bw = "baseline_warden.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["."]
