[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-warden"
dynamic = ["version"]
description = "Baseline compatibility gate for web projects"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Baseline Warden"}]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12,<0.13",
    "click>=8.1.7,<8.2",
    "pydantic>=2.6,<3",
    "httpx>=0.27,<0.28",
    "rich>=13.7,<14",
    "tinycss2>=1.3,<1.4"
]

[project.scripts]
bw = "baseline_warden.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
# Use the git tag as the project version when building from a tag.
# Provides a safe fallback for environments without SCM metadata.
fallback_version = "0.0.0"
